--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
     "react": "^18.1.0",
+    "react-beautiful-dnd-next": "^11.0.5",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1"
   },
@@ -22,8 +23,10 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "typescript": "4.6.3",
+    "uuid": "^8.3.2"
   }
 }
