--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
+    "next-auth": "^4.3.4",
     "react": "^18.1.0",
     "react-beautiful-dnd-next": "^11.0.5",
     "react-dom": "^18.1.0",
