--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.3",
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
     "react": "^18.1.0",
     "react-beautiful-dnd-next": "^11.0.5",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1"
+    "react-hook-form": "^7.33.0",
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
