Autenticacion agregada con Next-Auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@/pages/*": ["pages/*"],
       "@/public/*": ["public/*"],
       "@/redux/*": ["redux/*"],
+      "@/client/*": ["client/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
