--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.9.3",
-    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "next": "^12.1.6",
     "next-auth": "^4.3.4",
@@ -22,6 +22,8 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.33.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.39.1",
+    "react-spinners": "^0.13.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
