--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/react": "^2.0.0-next.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.9.3",
@@ -24,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-query": "^3.39.1",
     "react-spinners": "^0.13.3",
+    "sweetalert2": "^11.4.23",
     "yup": "^0.32.11"
   },
   "devDependencies": {
